--- a/uzume.cabal
+++ b/uzume.cabal
@@ -15,8 +15,12 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Uzume
+                     , Uzume.Driver.IR
+                     , Uzume.Driver.Krkr.TJS2IR
   build-depends:       base >= 4.7 && < 5
+                     , text
+                     , template
                      , language-krkr
   default-language:    Haskell2010
 
@@ -34,6 +38,8 @@ test-suite uzume-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , hspec >= 1.3
+                     , parsec >= 3
                      , uzume
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
