--- a/uzume.cabal
+++ b/uzume.cabal
@@ -33,16 +33,15 @@ executable uzume-exe
                      , language-krkr
   default-language:    Haskell2010
 
-test-suite uzume-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
+test-suite spec
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs: test
+  default-language:    Haskell2010
+  ghc-options: -Wall
   build-depends:       base
                      , hspec >= 1.3
-                     , parsec >= 3
                      , uzume
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
 
 source-repository head
   type:     git
