--- a/uzume.cabal
+++ b/uzume.cabal
@@ -20,17 +20,19 @@ library
                      , Uzume.Driver.Krkr.TJS2IR
   build-depends:       base >= 4.7 && < 5
                      , text
+                     , mtl
                      , template
                      , language-krkr
   default-language:    Haskell2010
 
-executable uzume-exe
+executable uzume
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , uzume
                      , language-krkr
+                     , uzume
+                     , text
   default-language:    Haskell2010
 
 test-suite spec
