--- a/jinzamomi.cabal
+++ b/jinzamomi.cabal
@@ -16,10 +16,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Jinzamomi
+                     , Jinzamomi.Driver
                      , Jinzamomi.Driver.IR
-                     , Jinzamomi.Driver.Krkr.TJS2IR
+                     , Jinzamomi.Driver.Krkr
   build-depends:       base >= 4.7 && < 5
                      , text
+                     , hslogger
                      , mtl
                      , template
                      , language-krkr
