--- a/jinzamomi.cabal
+++ b/jinzamomi.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Jinzamomi
                      , Jinzamomi.Driver
+                     , Jinzamomi.Driver.Util
                      , Jinzamomi.Driver.IR
                      , Jinzamomi.Driver.Krkr
   build-depends:       base >= 4.7 && < 5
@@ -24,6 +25,10 @@ library
                      , hslogger
                      , mtl
                      , template
+                     , optparse-applicative
+                     , directory
+                     , filepath
+                     , MissingH
                      , language-krkr
   default-language:    Haskell2010
 
@@ -36,6 +41,7 @@ executable jinzamomi
                      , language-krkr
                      , jinzamomi
                      , text
+                     , optparse-applicative
   default-language:    Haskell2010
 
 test-suite spec
