--- a/jinzamomi.cabal
+++ b/jinzamomi.cabal
@@ -24,6 +24,7 @@ library
                      , Jinzamomi.Driver.Krkr.KAG2IR
   build-depends:       base >= 4.7 && < 5
                      , text
+                     , bytestring
                      , parsec
                      , hslogger
                      , mtl
@@ -32,6 +33,7 @@ library
                      , directory
                      , filepath
                      , MissingH
+                     , aeson
                      , language-krkr
   default-language:    Haskell2010
 
